yaml-files/y-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-api-service-other
spec:
  type: LoadBalancer
  ports:
  - port: 1323
    targetPort: 1323
  selector:
    app: y-api-other
