yaml-files/y-network-policy.yaml
# Policy to only give the y-api access to the y-db
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: y-network-policy-db
spec:
  podSelector:
    matchLabels:
      app: y-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: y-api
---
# Policy to isolate the project's namespace, nothing out to other (example: prod) namespaces
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: y-network-policy-namespace
  namespace: y-dev
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
  egress:
  - to:
    - podSelector: {}
---
# Policy to block all egress traffic from the y-client
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: y-network-policy-internet
  namespace: y-dev
spec:
  podSelector:
    matchLabels:
      app: y-client
  policyTypes:
  - Egress
